--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <div ng-bind="::message"></div>
     </div>
 
+
     <script src="dist/vendors.bundle.js" type="text/javascript"></script>
+    <script src="dist/app.bundle.js" type="text/javascript"></script>
     <script type="text/javascript">
         var helloApp = angular.module('helloApp', []);
 
@@ -19,5 +21,7 @@
         }]);
 
     </script>
+
+
 </body>
 </html>
