Adds Bootstrap framework

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AngularJS Playground</title>
 </head>
-<body ng-app="helloApp">
+<body>
+
+<div class="container" ng-app="helloApp">
     <hello-component name="John Papa"></hello-component>
+</div>
+
 </body>
 </html>
