Adds ng-annotate-loader and enables ng-strick-di

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div class="container" ng-app="helloApp">
+<div class="container" ng-app="helloApp" ng-strict-di>
     <hello-component name="John Papa"></hello-component>
 </div>
 
