Creates a country-list component

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="container" ng-app="helloApp" ng-strict-di>
-    <hello-component name="John Papa"></hello-component>
+    <country-list-component></country-list-component>
 </div>
 
 </body>
