Creates demo-component to be the root component of demoApp

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<div class="container" ng-app="helloApp" ng-strict-di>
-    <country-list-component></country-list-component>
+<div class="container" ng-app="demoApp" ng-strict-di>
+    <demo-component></demo-component>
 </div>
 
 </body>
